# guild-bot

./: .gitignore  Dockerfile  Makefile  pyproject.toml
guild_bot/: __main__.py
scripts/: generate_oauth.py
