[tool.poetry]
name = "guild_bot"
version = "0.1.0"
description = ""
authors = ["Alexander Keating <keating.dev@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
